	some old code I had written and then subsequently removed. Atom
	parities will now be used for 0D structures, but only if "s" is
	specified.

2010-08-23 Noel O'Boyle

	* include/openbabel/stereo/stereo.h, perception.cpp: Add doxygen docs
	for TetStereoTo0D and change return value to bool.

2010-08-23  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/parsmart.cpp, include/openbabel/parsmart.h: Add thread-safe
	SMARTS matching API, PR#3949927, thanks to David Koes.

	* src/formats/mol2format.cpp: Disable tellg/seekg forwarding,
	which is very slow with gzip-compressed mol2.gz
	files. PR#3048758.

	* src/formats/outformat.cpp: Handle new GAMESS-US/WinGAMESS output
	files.

	* src/kekulize.cpp: Add deeper recursion for aromaticity/kekule
	determination. Solves a number of semi-rare molecules with 6+
	fused 6-membered rings.

	* test/files/forcefield.sdf: Fix Esomeprazole molecule -- not
	protonated. This caused an impossible aromatization issue.

	* test/files/*results.txt: Regenerate forcefield results.

2010-08-22 Noel O'Boyle

	* scripts/CMakeLists.txt: Should have been using STREQUAL
	not EQUAL when comparing strings. The Ruby bindings (among
	others) were not being installed to the correct location.

2010-08-22 Chris Morley

	It's a bit late for new features but the value of this one
	shows up when writing command-line documentation.
	* include/openbabel/obconversion.h, src/obconversion.cpp
	(FullConvert,OpenAndSetFormat):	When file name starts with -:
	it is treated as SMILES and put in a stringstream rather being
	used to open a ifstream.

	* tools/obabel.cpp: pass through files starting with "-:", e.g.
	    obabel -:CN2C(=O)N(C)C(=O)C1=C2N=CN1C -ocan
	Multiple use also possible. Not enabled in babel, but could be.

	* src/obconversion.cpp: Comment out line end buffer deletion,
	so cml conversion works but still have memory leak.

2010-08-19 Noel O'Boyle

	* scripts/CMakeLists.txt: Get rid of return() statements by